[package]
name = "workbench-desktop"
version = "1.0.0"
description = "A Tauri App"
authors = ["Pluto"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
#name = "tauri_app_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-log = "2.0.2"
tauri-plugin-notification = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-window-state = "2.0.2"
tauri-plugin-single-instance = { version = "2.0.1", features = ["deep-link"] }
tauri-plugin-positioner = "2.0.2"
tauri-plugin-process = "2.0.1"
tauri-plugin-fs = "2.0.3"
tauri-plugin-clipboard-manager = "2.2.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true
opt-level = 0
[profile.dev.package."*"]
opt-level = 0

#[profile.release]
#codegen-units = 1 # Allows LLVM to perform better optimization.
#lto = true # Enables link-time-optimizations.
#opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
#panic = "abort" # Higher performance by disabling panic handlers.
#strip = true # Ensures debug symbols are removed.
